<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:background="@drawable/edit_text_border_black"
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginEnd="10dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/name_label"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNameDetail"
            android:text="@string/name_label"
            android:textStyle="bold"
            android:layout_weight="0.7"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/company"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompany"
            android:text="@string/company"
            android:layout_weight="0.7"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/blog"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBlog"
            android:text="@string/blog"
            android:layout_weight="0.7"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
