<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:gravity="start"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:src="@drawable/ic_back"
                android:padding="5dp"
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarTitle"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:layout_weight="0.85"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAvatar"
            android:src="@drawable/ic_no_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/black"
                    android:indeterminateTintMode="src_in"
                    android:visibility="visible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/followers"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFollowers"
                    android:text="@string/followers"
                    android:textSize="12sp"
                    android:layout_weight="1.2"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/following"
                    android:layout_width="0dp"
                    android:textSize="12sp"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFollowing"
                    android:text="@string/following"
                    android:layout_width="0dp"
                    android:textSize="12sp"
                    android:layout_weight="1.2"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <include layout="@layout/content_details"/>

            <include layout="@layout/content_notes"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveNote"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:textColor="@color/black"
                android:text="@string/save"
                android:background="@drawable/edit_text_border_black"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>